[project]
name = "ip-mapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Rares-AndreiVasiu",email = "rares_vasiu03@yahoo.ro"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "ipinfo (>=5.3.0,<6.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "basemap (>=2.0.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "ip_mapper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
