[tool.poetry]
name = "ip-mapper"
version = "0.1.0"
description = ""
authors = ["Rares-AndreiVasiu <rares_vasiu03@yahoo.ro>"]
readme = "README.md"
packages = [{ include = "ip_mapper", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ipinfo = ">=5.3.0,<6.0.0"
matplotlib = ">=3.10.7,<4.0.0"
basemap = ">=2.0.0,<3.0.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

